Table users {
  id integer [primary key]
  username varchar [unique, not null]
  email varchar [unique, not null]
  password varchar [not null]
  role UserRole [not null]
}

Enum UserRole {
    USER
    ADMIN
}

Table movies {
  id integer [primary key]
  title varchar [unique, not null]
  description varchar
  required_age integer [not null]
  duration_minutes integer [not null]
}

Table rooms {
  id integer [primary key]
  name varchar [not null]
}

Table seats {
  id integer [primary key]
  room_id integer [not null]
  seat_row integer [not null]
  number integer [not null]

  Indexes {
      (room_id, seat_row, number) [unique]
  }
}

Table screenings {
  id integer [primary key]
  movie_id integer [not null]
  room_id integer [not null]
  start_time datetime [not null]
  end_time datetime [not null]
}

Table reservations {
  id integer [primary key]
  user_id integer [not null]
  screening_id integer [not null]
  seat_id integer [not null]
  status ReservationStatus [not null]
  active bool

  Indexes {
    (screening_id, seat_id, active) [unique]
  }
}

Enum ReservationStatus {
  PENDING
  CONFIRMED
  CANCELLED
}

Ref: "users"."id" < "reservations"."user_id"

Ref: "screenings"."id" < "reservations"."screening_id"

Ref: "movies"."id" < "screenings"."movie_id"

Ref: "rooms"."id" < "screenings"."room_id"

Ref: "rooms"."id" < "seats"."room_id"

Ref: "seats"."id" < "reservations"."seat_id"
